--- a/.github/workflows/psychology-test.yml
+++ b/.github/workflows/psychology-test.yml
@@ -36,10 +36,17 @@ jobs:
           TOPIC: ${{ github.event.inputs.topic }}
         run: python scripts/generate.py
 
-      - name: 📤 변경사항 커밋 & 푸시
+      - name: 📤 변경사항 커밋 & 푸시 (main)
         run: |
           git config --global user.name "SOULCAKEY Bot"
           git config --global user.email "bot@soulcakey.com"
-          git add mindpop/tests/ mindpop/index.html
+          git add soulcakey/mindpop/tests/ soulcakey/mindpop/index.html
           git diff --staged --quiet || git commit -m "🧠 새 심리테스트 추가 $(date '+%Y-%m-%d')"
           git push
+
+      - name: 🚀 gh-pages 브랜치로 배포
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./soulcakey/mindpop
+          commit_message: "🚀 SOULCAKEY 배포 $(date '+%Y-%m-%d')"
