--- a/.github/workflows/psychology-test.yml
+++ b/.github/workflows/psychology-test.yml
@@ -42,7 +42,8 @@ jobs:
           git config --global user.email "bot@soulcakey.com"
           git add mindpop/tests/ mindpop/index.html
           git diff --staged --quiet || git commit -m "🧠 새 심리테스트 추가 $(date '+%Y-%m-%d')"
-          git push
+        git pull --rebase origin main
+git push
 
       - name: 🚀 gh-pages 브랜치로 배포
         uses: peaceiris/actions-gh-pages@v4
